--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
 networkx==3.2.1
 matplotlib==3.8.2
-numpy==1.26.3 
+numpy==1.26.3
+pytest==8.0.0
+pytest-cov==4.1.0
+pytest-xdist==3.5.0
+pytest-timeout==2.2.0
+tqdm==4.66.1 
